# 2023-Diansai-H

./: CMakeLists.txt  xiaosai.ioc  任务.md  硬件接线与cubemx配置档案.md
Core/Inc/: dsp_process.h  lcd_ui.h  main.h  signal_output.h
Core/Src/: dsp_process.c  lcd_ui.c  main.c  signal_output.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
HARDWARE/: CMakeLists.txt
HARDWARE/INC/: Communication.h  ad7616.h  ad7616_port.h  ad9833.h  ad9834.h  delay.h  lcd.h
HARDWARE/SRC/: Communication.c  ad7616.c  ad9833.c  ad9834.c  delay.c  lcd.c
cmake/: gcc-arm-none-eabi.cmake
report/: .~lock.信号分离装置设计报告.pdf#  lu424kls2.tmp  signal_separation_report.aux  signal_separation_report.out  signal_separation_report.tex  signal_separation_report.toc  信号分离装置设计报告_v10.pptx  信号分离装置设计报告_v11.pptx  信号分离装置设计报告_v12.pptx  信号分离装置设计报告_v13.pptx  信号分离装置设计报告_v14.pptx  信号分离装置设计报告_v15.pptx  信号分离装置设计报告_v16.pptx  信号分离装置设计报告_v5.pptx  信号分离装置设计报告_v7.pptx  信号分离装置设计报告_v8.pptx  信号分离装置设计报告_v9.pptx
report/ppt图片/: 图片说明.txt
scripts/: make_report_figures.py  save_clipboard_image.ps1
